--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Bouncer
+= Bouncer[http://libraries.io/rubygems/bouncer]
 
 Bouncer makes it easy to remove a collabroator's access to all of your github projects, perfect for when someone leaves your company or team and you don't want them to have access to your projects anymore.
 
